--- a/app/views/assignments/index.erb
+++ b/app/views/assignments/index.erb
@@ -1,5 +1,14 @@
-<% @assignments.each do |assignment| %>
-    <h4><%= assignment.title %></h4>
-        <p><%= assignment.content %></p>
-        <p>--<a href="/assignemnts/<%=assignment.id%>" ><button>View This Assignemnt</button></a></p>
+<h3>All Assignments from ALL Teachers</h3>
+
+
+    <% @assignments.each do |assignment| %>
+        <h4><%= assignment.title %></h4>
+            <p><%= assignment.content %></p>
+            <p>--<a href="/assignemnts/<%=assignment.id%>" ><button>View This Assignemnt</button></a></p>
     <% end %>
+    <br>
+    <br>
+    <br>
+    <p><a href="/teachers/<%current_user.id%>" ><button>View Your Assignments</button></a></p>
+    <p><a href="/teachers" ><button>View All Teachers</button></a></p>
+    <p><a href="/logout" ><button>Log Out</button></a></p>
