added existing assignment content in 'textarea' when editing an assignmnet.

--- a/app/views/assignments/edit.erb
+++ b/app/views/assignments/edit.erb
@@ -10,7 +10,7 @@
 
     <p>
     <label for="content">Content: </label>
-    <textarea name="assignment[content]" value="<%=@assignment.content%>" id="assignment_content" rows="4" cols="50" ></textarea><br>
+    <textarea name="assignment[content]" value="<%=@assignment.content%>" id="assignment_content" rows="4" cols="50" ><%=@assignment.content%></textarea><br>
     </p>
 
             <input type='submit' value='Edit Assignment'>
