--- a/app/views/teachers/index.erb
+++ b/app/views/teachers/index.erb
@@ -6,5 +6,5 @@
 <br>
 <br>
 <p><a href="/assignments" ><button>View All Assignments</button></a></p>
-<p><a href="/teachers/<%current_user.slug%>" ><button>View Your Assignments</button></a></p>
+<p><a href="/teachers/<%=current_user.slug%>" ><button>View Your Assignments</button></a></p>
 <p><a href="/logout" ><button>Log Out</button></a></p>
