--- a/app/views/teachers/show.erb
+++ b/app/views/teachers/show.erb
@@ -9,5 +9,6 @@
 <br>
 <br>
 <p><a href="/assignments" ><button>View All Assignments</button></a></p>
-<p><a href="/teachers/<%=current_user.id%>" ><button>View Your Assignments</button></a></p>
+<p><a href="/teachers/<%=current_user.slug%>" ><button>View Your Assignments</button></a></p>
+<p><a href="/students" ><button>View All Students</button></a></p>
 <p><a href="/teachers" ><button>View All Teachers</button></a></p> 
