--- a/app/views/assignments/index.erb
+++ b/app/views/assignments/index.erb
@@ -9,6 +9,6 @@
     <br>
     <br>
     <br>
-    <p><a href="/teachers/<%=current_user.id%>" ><button>View Your Assignments</button></a></p>
+    <p><a href="/teachers/<%=current_user.slug%>" ><button>View Your Assignments</button></a></p>
     <p><a href="/teachers" ><button>View All Teachers</button></a></p>
     <p><a href="/logout" ><button>Log Out</button></a></p>
