--- a/app/views/assignments/show.erb
+++ b/app/views/assignments/show.erb
@@ -1,9 +1,12 @@
 <h2><%=@assignment.title%></h2>
 <p><%=@assignment.content%></p>
-<h2>Students With This Assignment:</h2>
-<li><a href="/students/<%= student.slug %>">Their Assignments</a><br>
-<body>
 <p><em>created by - <%=@teacher.fname%> <%=@teacher.lname%></em></p>
+
+<h2>Students With This Assignment:</h2>
+<!-- iteration of students attached to assignemnt.id-->
+
+
+
 <p><a href="/assignments/<%=@assignment.id%>/edit" ><button>Edit This Post</button></a></p>
 <br>
 <br>
@@ -12,4 +15,10 @@
 <p><a href="/teachers/<%=current_user.slug%>" ><button>View Your Assignments</button></a></p>
 <p><a href="/teachers" ><button>View All Teachers</button></a></p>
 <p><a href="/logout" ><button>Log Out</button></a></p>
+
+
+
+
+
+
 </body>
