--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,9 +1,6 @@
 <h2>Welcome to EZGradebook!</h2>
-<form action="/login" method="GET"> 
-    <label for="LogIn">Teachers LogIn Here:</label>
-    <button>LogIn</button></h4>
-</form>
-<form action="/signup" method="GET">
-    <label for="Signup">Don't have and account?</label>
-    <button>Signup</button></h4>
-</form>
+<label for="LogIn">Teachers Log In Here:</label>
+<p><a href="/login" ><button>Log In</button></a></p>
+
+<label for="Signup">Don't have and account?</label>
+<p><a href="/signup" ><button>Sign Up</button></a></p>
