--- a/app/views/teachers/new.erb
+++ b/app/views/teachers/new.erb
@@ -19,4 +19,6 @@
     </p>
 
             <input type='submit' value='Create Account'>
-</form>
+</form><br><br>
+<label for="LogIn">Teachers Log In Here:</label>
+<p><a href="/login" ><button>Log In</button></a></p>
