--- a/app/views/assignments/index.erb
+++ b/app/views/assignments/index.erb
@@ -1,5 +1,5 @@
 <h3>All Assignments from ALL Teachers</h3>
-
+<p>--<a href="/logout" ><button>LogOut</button></a></p>
 
     <% @assignments.each do |assignment| %>
         <h4><%= assignment.title %></h4>
@@ -11,4 +11,3 @@
     <br>
     <p><a href="/teachers/<%=current_user.slug%>" ><button>View Your Assignments</button></a></p>
     <p><a href="/teachers" ><button>View All Teachers</button></a></p>
-    <p><a href="/logout" ><button>Log Out</button></a></p>
