--- a/app/views/assignments/index.erb
+++ b/app/views/assignments/index.erb
@@ -1,8 +1,12 @@
 <h3>All Assignments from ALL Teachers</h3>
 <p>--<a href="/logout" ><button>LogOut</button></a></p>
 
+
     <% @assignments.each do |assignment| %>
         <h4><%= assignment.title %></h4>
+        <% teacher = Teacher.find_by_id(assignment.teacher_id) %>
+        <%binding.pry%>
+        <p><em>created by - <%=teacher.fname%> <%=teacher.lname%></em></p>
             <p><%= assignment.content %></p>
             <p>--<a href="/assignments/<%=assignment.id%>" ><button>View This Assignment</button></a></p>
     <% end %>
