--- a/app/views/assignments/show.erb
+++ b/app/views/assignments/show.erb
@@ -7,7 +7,8 @@
 <% @assignment.assignments_students.each do |assignment| %>
     <% Student.all.each do |student| %>
         <% if student.id == assignment.student_id %>
-            <%= student.lname %>, <%= student.fname %> -- <%= assignment.grade %><br>
+            
+            <a href="/students/<%= student.slug %>" ><%= student.lname %>, <%= student.fname %> -- <%= assignment.grade %></a><br>
         <% end %>
     <% end %>
 <% end %>    
