--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,11 +2,56 @@
 <html>
   <head>
     <title>EZGradebook!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <style>
+      body {
+        background-image: url(https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);background-size: 100%; 
+    }
+    </style>
   </head>
   <body>
-    <div class="container">
-      <h1>EZGradebook!</h1>
-    </div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">EZGradebook!</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/teachers">Teachers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/students">Students</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Assignments</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <% if current_user %>
+                    <li><a class="dropdown-item" href="/teachers/<%=session[:teacher_id]%>">My Assignments</a></li>
+                    <%else%>
+                    <li><a class="dropdown-item" href="/assignments">My Assignments</a></li>
+                  <%end%>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/assignments">All Assignments</a></li>
+                </ul>
+              </li>
+              <%if session[:teacher_id] %>
+                <li class="nav-item" name="logout">
+                  <a class="nav-link" href="/logout">Log Out</a></li>
+              <%else%>
+                <li class="nav-item" name="login">
+                  <a class="nav-link" href="/login">Log In</a></li>
+                <li class="nav-item" name="signup">
+                    <a class="nav-link" href="/signup">Signup</a></li>
+              <% end %>
+            </ul>
+          </div>
+      </div>
+    </nav>
+
+
       <%= yield %>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
 </html>
