--- a/app/views/assignments/new.erb
+++ b/app/views/assignments/new.erb
@@ -1,33 +1,27 @@
-<h2>Create a new Assignemnt:</h2>
-
-<form action='/assignments' method="POST">
-    <p>
-            <label for="title">Title: </label>
-            <input type="text" name="assignment[title]" id='assignment_title'><br>
-    </p>
-    <p>
-            <label for="content">Content: </label>
-            <textarea name="assignment[content]" id="assignment_content" rows="4" cols="50"></textarea><br>
-    </p>
-
-    <p>
-            <label for="students">Students Grades:</label><br>
-            <% @students.each do |student| %>
-                <label for="student_grade"><%= student.lname %>, <%= student.fname %></label>
-                <input type="text" name="students[<%=student.id%>][grade]" id="student_grade" %><br>
-                <%end%>
-    </p>
-            <input type='submit' value='Create Assignment'>
-</form>
-
-
-<!-- Add form action="/assignments-students" method="POST" for  grades > --> 
-
-
-<br>
-<br>
-<br>
-<p><a href="/assignments" ><button>View All Assignments</button></a></p>
-<p><a href="/teachers/<%current_user.id%>" ><button>View Your Assignments</button></a></p>
-<p><a href="/teachers" ><button>View All Teachers</button></a></p>
-<p><a href="/logout" ><button>Log Out</button></a></p>
+<div class="container">
+        <form class="mt-5 p-4 mx-auto bg-white text-dark" action='/assignments' method="POST" style="width: 468px;"">
+                <h4>New Assignemnt:</h4>
+                        <div class="form-group">
+                                <label for="title">Title: </label>
+                                <div class="col-sm-9">
+                                        <input type="text" name="assignment[title]" id='assignment_title' class="form-control">
+                                </div>
+                        </div>
+                        <div class="form-group">
+                                <label for="content">Content: </label>
+                                <div class="col-sm-9">
+                                        <textarea name="assignment[content]" id="assignment_content" rows="4" cols="50"></textarea>
+                                </div>
+                        </div>
+                        <div class="form-group">
+                                <label for="students">Students Grades:</label>
+                                <% @students.each do |student| %>
+                                <div class="container mx-auto bg-white text-dark"
+                                        <label for="student_grade"><%= student.lname %>, <%= student.fname %></label>
+                                        <input class="form-control" type="text" name="students[<%=student.id%>][grade]" id="student_grade" %>
+                                </div>
+                                <%end%>
+                        </div>
+                <button type='submit' value='Create Assignment' class="btn btn-primary btn-sm mt-3" value="Create Assignment">Create Assignment</button>
+        </form>
+</div>
