--- a/app/views/assignments/show.erb
+++ b/app/views/assignments/show.erb
@@ -1,30 +1,16 @@
-<h2><%=@assignment.title%></h2>
-<p><%=@assignment.content%></p>
-<p><em>created by - <%=@teacher.fname%> <%=@teacher.lname%></em></p>
+<div class="container mt-5 p-4 mx-auto bg-white text-dark" style="width: 568px;">
 
-<h2>Students With This Assignment:</h2>
-<!-- iteration of students attached to assignemnt.id-->
-<% @assignment.assignments_students.each do |assignment| %>
-    <% Student.all.each do |student| %>
-        <% if student.id == assignment.student_id %>
-            <a href="/students/<%= student.slug %>" ><%= student.lname %>, <%= student.fname %> -- <%= assignment.grade %></a><br>
+    <h4><%=@assignment.title%></h4>
+    <%=@assignment.content%><br>
+    <a href="/teachers/<%=@teacher.slug%>"<em>created by - <%=@teacher.fname%> <%=@teacher.lname%></em></a>
+
+    <h5>Students With This Assignment:</h5>
+    <% @assignment.assignments_students.each do |assignment| %>
+        <% Student.all.each do |student| %>
+            <% if student.id == assignment.student_id %>
+                <a href="/students/<%= student.slug %>" ><%= student.lname %>, <%= student.fname %> -- <%= assignment.grade %></a><br>
+            <% end %>
         <% end %>
-    <% end %>
-<% end %>    
-
-
-<p><a href="/assignments/<%=@assignment.id%>/edit" ><button>Edit This Post</button></a></p>
-<br>
-<br>
-<br>
-<p><a href="/assignments" ><button>View All Assignments</button></a></p>
-<p><a href="/teachers/<%=current_user.slug%>" ><button>View Your Assignments</button></a></p>
-<p><a href="/teachers" ><button>View All Teachers</button></a></p>
-<p><a href="/logout" ><button>Log Out</button></a></p>
-
-
-
-
-
-
-</body>
+    <% end %>    
+    <a href="/assignments/<%=@assignment.id%>/edit" ><button class="btn btn-primary btn-sm mt-3">Edit This Post</button></a>
+</div>
