--- a/app/views/teachers/login.erb
+++ b/app/views/teachers/login.erb
@@ -1,14 +1,24 @@
-<h2>logIn to your account:</h2>
 
-<form action='/login' method="POST">
-    <p>
-            <label for="username">Username: </label>
-            <input type="text" name="username" id='username'><br>
-    </p>
-    <p>
-            <label for="password">Password: </label>
-            <input type="password" name="password" id="password"><br>
-    </p>
-
-            <input type='submit' value='LogIn'>
-</form>
+      <div class="container ">
+        
+        <form class="mt-4 p-4 mx-auto bg-white text-dark" action='/login' method="POST" style="width: 468px;">
+          
+          <div class="form-group">
+            
+            <label for="username">Username</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" name="username" id="username" aria-describedby="username_help" placeholder="Enter username">
+              <small id="username_help" class="form-text text-muted">We'll never share your info with anyone else.</small>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <div class="col-sm-9">
+              <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+            </div>
+            <span class="border"></span>
+          </div>
+          <button type="submit" class="btn btn-primary" value="LogIn">Log In</button>
+          
+        </form>
+      </div>
