--- a/app/views/teachers/new.erb
+++ b/app/views/teachers/new.erb
@@ -1,24 +1,31 @@
-<h2>Create your account here:</h2>
-
-<form action='/signup' method="POST">
-    <p>
-            <label for="username">Username: </label>
-            <input type="text" name="username" id='username'><br>
-    </p>
-    <p>
-            <label for="fname">First Name: </label>
-            <input type="text" name="fname" id="fname"><br>
-    </p>
-    <p>
-            <label for="lname">Last Name: </label>
-            <input type="text" name="lname" id="lname"><br>
-    </p>
-    <p>
-            <label for="password">Password: </label>
-            <input type="password" name="password" id="password"><br>
-    </p>
-
-            <input type='submit' value='Create Account'>
-</form><br><br>
-<label for="LogIn">Teachers Log In Here:</label>
-<p><a href="/login" ><button>Log In</button></a></p>
+<div class="container">   
+        <form class="mt-5 p-4 mx-auto bg-white text-dark" action='/signup' method="POST" style="width: 468px;">
+                <div class="form-group">
+                        <label for="username">Username: </label>
+                        <div class="col-sm-9">
+                                <input type="text" class="form-control" name="username" id='username' aria-describedby="username_help" placeholder="Enter username">
+                                <small id="username_help" class="form-text text-muted">We'll never share your info with anyone else.</small>
+                        </div>
+                </div>
+                <div class="form-group">        
+                        <label for="fname">First Name: </label>
+                        <div class="col-sm-9">
+                                <input type="text" name="fname" id="fname" class="form-control">
+                        </div>
+                </div>
+                <div class="form-group">
+                        <label for="lname">Last Name: </label>
+                        <div class="col-sm-9">
+                                <input type="text" name="lname" id="lname" class="form-control">
+                        </div>
+                </div>
+                <div class="form-group">
+                        <label for="password">Password: </label>
+                        <div class="col-sm-9">
+                                <input type="password" name="password" id="password" class="form-control">
+                        </div>
+                        <!-- <span class="border"></span> -->
+                </div>
+                <button type='submit' class="btn btn-primary btn-sm mt-3" value='Create Account'>Create Account</button>
+        </form>
+</div>
